--- a/pom.xml
+++ b/pom.xml
@@ -2,5 +2,19 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>pt.brunojesus.fourinrow</groupId>
   <artifactId>fourinrow-gui</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0</version>
+
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
+  <distributionManagement>
+    <repository>
+      <id>mvn-brunojesus</id>
+      <name>Bruno Jesus MVN Repo</name>
+      <url>https://mvn.brunojesus.pt/releases</url>
+    </repository>
+  </distributionManagement>
 </project>
